[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# 必需元数据
name = "cd-analyzer"  # !!! 重要：在PyPI上必须是唯一的！你可能需要换个名字
version = "0.1.0"           # 初始版本号
authors = [
  { name="Your Name", email="1311343971@qq.com" },
]
description = "A tool for analyzing and plotting circular dichroism (CD) temperature-dependent data and calculating melting temperature (Tm)."

# 指向你的README文件
readme = "README.md"

# 必需：选择一个开源许可证
license = { file="LICENSE" }

# 必需：声明支持的 Python 版本
requires-python = ">=3.9"

# 核心：声明项目依赖项
# 基于你的代码，需要 numpy, scipy, matplotlib, 和 pandas
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas"
]

# 可选但推荐的元数据
keywords = ["science", "biochemistry", "circular dichroism", "protein", "Tm", "fitting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",  # 与上面的license匹配
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[project.urls]
"Homepage" = "https://github.com/your-username/cd-analysis-tool"  # 替换成你的项目主页
"Bug Tracker" = "https://github.com/your-username/cd-analysis-tool/issues"
